@@ -48,8 +48,16 @@ EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "tinyxml", "thirdparty\tinyxml\tinyxml_vs2010.vcxproj", "{CCC76489-E12C-4744-B31F-0BACD6F0A1B2}"
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "ConsoleDemo", "demos\ConsoleDemo\ConsoleDemo_vs2010.vcxproj", "{26D45404-F202-438D-80D5-E1B57B7A22E1}"
+	ProjectSection(ProjectDependencies) = postProject
+		{9BE99719-AA32-4463-A011-B61D55F020D6} = {9BE99719-AA32-4463-A011-B61D55F020D6}
+		{939312D6-690A-4103-92C5-4D89025BF10A} = {939312D6-690A-4103-92C5-4D89025BF10A}
+	EndProjectSection
 EndProject
 Project("{8BC9CEB8-8B4A-11D0-8D11-00A0C91BC942}") = "WTLDemo", "demos\WTLDemo\WTLDemo_vs2010.vcxproj", "{97B22865-FFCE-4BD0-ABE5-3BE707B59B88}"
+	ProjectSection(ProjectDependencies) = postProject
+		{9BE99719-AA32-4463-A011-B61D55F020D6} = {9BE99719-AA32-4463-A011-B61D55F020D6}
+		{939312D6-690A-4103-92C5-4D89025BF10A} = {939312D6-690A-4103-92C5-4D89025BF10A}
+	EndProjectSection
 EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
