@@ -1191,6 +1191,7 @@ crExceptionFilter(
 
 #define CR_NONCONTINUABLE_EXCEPTION  32  //!< Non continuable sofware exception. 
 #define CR_THROW                     33  //!< Throw C++ typed exception.
+#define CR_STACK_OVERFLOW			 34  //!< Stack overflow.
 
 /*! \ingroup CrashRptAPI  
 *  \brief Emulates a predefined crash situation.
