@@ -4,7 +4,10 @@
 
 - Reorganized demos (moved to demos folder and renamed CrashRptTest=>WTLDemo, crashcon=>ConsoleDemo).
 - Fixed: Impossible to send Crash reports in Windows 7 64bits (issue 104).
-
+- Fixed: Crash report is not discarded when 'Close the program' is selected (issue 94).
+- Fixed: Application is restarted twice after crash (issue 115).
+- Fixed: CRP_COL_PROBLEM_DESCRIPTION not working (issue 118).
+- Fixed: Improve robustness to stack overflow (issue 121).
 
 --- Ver. 1.3.0 ---
 
